linked all pages to navbar and aboutme

--- a/partials/aboutme.html
+++ b/partials/aboutme.html
@@ -1,41 +1,45 @@
 <div id='aboutme'>
 
   <div class="professional-page col-xs-6">
-    <h1>Professional History</h1>
-    <img src="../../images/professional-photo.jpeg" id="pro-img">
+    <a href="#!/bio/professional">
+      <h1>Professional History</h1>
+      <img src="../../images/professional-photo.jpeg" id="pro-img">
+    </a>
   </div>
+
   <div class="projects-page col-xs-6">
-    <h1>Projects</h1>
-    <img src="../../images/laptop.jpeg" id="project-img">
+    <a href="#!/bio/projects">
+      <h1>Projects</h1>
+      <img src="../../images/project.jpeg" id="project-img">
+    </a>
   </div>
 
   <div class="aboutme-page col-xs-12">
-
-    <div class='col-xs-3 img-div' ng-mouseenter="mouseEnter()" ng-mouseleave="mouseLeave()">
-      <h1>About Me</h1>
-      <img id="bio-photo" src="../../images/me.jpg">
+    <a href="#!/bio/blog">
+      <div class="col-xs-3 blog-page">
+        <h1>Blog</h1>
+        <img src="../../images/blog.jpeg" id="blog-img">
+    </a>
     </div>
-    <!--<p class='col-xs-3' > mouseover and pops up
-      My name is Amber and I am a native of good 'ole Tennessee. I grew up in Clarksville where I attended Austin Peay State Univeristy
-      with a degree in Marketing. I've been back and forth between Clarksville and Nashville for a few years, but I can finally
-      call Nashville home. I'm currently working for the state DOT in the IT Division as an Executive Assistant. I hope to
-      move into a development role to join my fellow IT peeps in the land of code!<br> I'm a HUGE foodie! I enjoy cooking
-      and my current endeavors include curing meats and growing my own vegtables. I also do a lot of knitting and cross-stitching
-      while I sit around with my pug, Puggy.
-    </p>-->
 
-    <div class="col-xs-6 blog-page">
-      <h1>Blog</h1>
-      <img src="../../images/blog.jpeg" id="blog-img">
+    <div class='col-xs-6 aboutme-div'>
+      <div class='col-xs-6 aboutme-div2'>
+        <img id="bio-photo" src="../../images/me.jpg">
+      </div>
+      <div class='col-xs-6'>
+        <p class="aboutme-p">
+          My name is Amber and I am a native of good 'ole Tennessee. I grew up in Clarksville where I attended Austin Peay State Univeristy
+          with a degree in Marketing. I'm currently working for the state DOT in the IT Division as an Executive Assistant.
+          I hope to move into a development role to join my fellow IT peeps in the land of code!
+        </p>
+      </div>
     </div>
 
     <div class="col-xs-3 contact-page">
-      <h1>Contact Me</h1>
-      <img src="../../images/contact.jpeg" id="contact-img">
+      <a href="#!/bio/contact">
+        <h1>Contact Me</h1>
+        <img src="../../images/contact.jpeg" id="contact-img">
+      </a>
     </div>
 
   </div>
-
-
-
-</div>
