--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -5,7 +5,7 @@
     <nav>
       <ul>
         <li><a ng-href="#!/aboutme">About Me</a></li>
-        <li><a ng-href="#!/bio/professional">Professional</a></li>
+        <li><a ng-href="#!/bio/professional">Professional History</a></li>
         <li><a ng-href="#!/bio/blog">Blog</a></li>
         <li><a ng-href="#!/bio/projects">Projects</a></li>
         <li><a ng-href="#!/bio/contact">Contact</a></li>
