--- a/partials/blog.html
+++ b/partials/blog.html
@@ -1,9 +1,9 @@
-<div>
-  <div class="blog">
-    <h1>Blog</h1>
-  </div>
+<div class="blog-title">
+  <h1>The Amber Chronicles</h1>
+</div>
+<div class="blog-background">
   <div ng-repeat="blog in blogs" class="blog">
-    <h1>{{blog.title}}</h1>
+    <h2>{{blog.title}}</h2>
     <h4>{{blog.date}}</h4>
     <p>{{blog.content}}</p>
   </div>
