--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,102 +1,15 @@
 @import 'variables';
-
-.aboutme-page {
-  padding: 0;
-
-    h1 {
-    position: absolute;
-    left: 5%;
-    bottom: 75%;
-    z-index: 2;
-  }
-
-
-  .img-div {
-    padding: 0;
-
-     #bio-photo {
-       position: relative;
-      width: 100%;
-      height: 100%;
-    }
-  }
+a {
+  all: unset;
 }
 
-.professional-page {
-  padding: 0;
 
-  h1 {
-    position: absolute;
-    right: 5%;
-    top: 80%;
-    z-index: 2;
-  }
+/////NAVBAR/////
 
-  #pro-img {
-    position: relative;
-    width: 100%;
-    height: 390px;
-  }
-}
-
-.projects-page {
-  padding: 0;
-
-   h1 {
-    position: absolute;
-    right: 5%;
-    bottom: 75%;
-    z-index: 2;
-  }
-
-  #project-img {
-    position: relative;
-    width: 100%;
-    height: 100%;
-  }
-
-}
-
-.blog-page {
-  padding: 0;
-
-   h1 {
-    position: absolute;
-    right: 2%;
-    bottom: 75%;
-    z-index: 2;
-  }
-
-  #blog-img {
-    position: relative;
-    width: 100%;
-    height: 293px;;
-  }
-}
-
-.contact-page {
-  padding: 0;
-
-   h1 {
-    position: absolute;
-    right: 10%;
-    top: 75%;
-    z-index: 2;
-  }
-
-  #contact-img {
-    position: relative;
-    width: 100%;
-    height: 293px;;
-  }
-}
-
-//NAVBAR
 @import url(https://fonts.googleapis.com/css?family=Quicksand);
 html,
 body {
    height: 100%;
-//    background-color: #333;
    font-family: 'Quicksand', sans-serif;
    color: black;
 }
@@ -111,6 +24,7 @@ body {
    background-color: lightgrey;
 }
 .menu-collapsed {
+    z-index: 2;
    transition: all .25s;
    position: fixed;
    top: 10px;
@@ -140,10 +54,12 @@ body {
    }
 }
 .b-a-expanded {
+   z-index: 2;
    transition: all .25s;
    top: -0px;
 }
 .menu-expanded {
+    z-index: 2;
    transition: all .25s;
    text-align: center;
    line-height: 200px;
@@ -193,10 +109,139 @@ body {
 h1 {
    font-size: 3em;
 }
-h3 {
-   color:#999;
-}
 p {
    line-height: 160%;
    letter-spacing:1px;
 }
+
+/////ABOUT ME/////
+.aboutme-page {
+  padding: 0;
+
+  .aboutme-div {
+     padding: 0;
+
+    .aboutme-div2 {
+      padding: 0;
+
+    #bio-photo {
+        padding: 0;
+        position: relative;
+        width: 100%;
+        height: 292px;
+     }
+    }
+  .aboutme-p {
+     margin: 10px;
+     padding: 5px;
+   }  
+  }  
+}
+
+.professional-page {
+  padding: 0;
+
+  h1 {
+    position: absolute;
+    right: 5%;
+    top: 80%;
+    z-index: 1;
+  }
+
+  #pro-img {
+    position: relative;
+    width: 100%;
+    height: 390px;
+  }
+}
+
+.projects-page {
+  padding: 0;
+
+   h1 {
+    position: absolute;
+    left: 5%;
+    bottom: 82%;
+    z-index: 1;
+  }
+
+  #project-img {
+    position: relative;
+    width: 100%;
+    height: 100%;
+  }
+
+}
+
+.blog-page {
+  padding: 0;
+
+   h1 {
+    position: absolute;
+    right: 2%;
+    bottom: 75%;
+    z-index: 1;
+  }
+
+  #blog-img {
+    position: relative;
+    width: 100%;
+    height: 293px;;
+  }
+}
+
+.contact-page {
+  padding: 0;
+
+   h1 {
+    position: absolute;
+    right: 10%;
+    top: 75%;
+    z-index: 1;
+  }
+
+  #contact-img {
+    position: relative;
+    width: 100%;
+    height: 293px;;
+  }
+}
+
+/////PROFESSIONAL PAGE/////
+.pro-title {
+  font-size: 25px;
+}
+
+.professional-background {
+ background-color: lightgrey;
+ padding: 10px;
+
+  .workhistory {
+    padding: 5px;
+  }
+
+  h3 {
+    color: black;
+  }
+
+  h4, h6, ul {
+    color: black;
+  } 
+}
+
+/////BLOG/////
+.blog-title {
+  font-size: 25px;
+}
+
+.blog-background {
+  padding: 20px;
+  background-color: lightgray;
+
+  .blog {
+    border-bottom: 2px solid black;
+  }
+}
+
+
+
