edited contacts and projects

--- a/partials/contact.html
+++ b/partials/contact.html
@@ -1,15 +1,20 @@
 <div id='contact'>
-
-  <div class='contact-page'>
-    <h1>How to Contact Me</h1>
+  <div class="contact-title">
+    <h1>Contact Me</h1>
   </div>
-  <div class="social-links">
-    <ul class="social">
-      <li><a href="mailto:wammber15@gmail.com" class="fa fa-envelope-o" aria-hidden="true"></a></li>
-      <li><a href="https://github.com/waamber" class="fa fa-github" aria-hidden="true"></a></li>
-      <li><a href="https://www.linkedin.com/in/amber-stuart-00076286/" class="fa fa-linkedin-square" aria-hidden="true"></a></li>
-      <li><a href="https://twitter.com/amber_maynee?lang=en" class="fa fa-twitter-square" aria-hidden="true"></a></li>
-    </ul>
+  <div class="social-links col-xs-12 text-center">
+    <div class="col-xs-3" ng-class="{'animated jello': hover1}" ng-mouseenter="hover1=true" ng-mouseleave="hover1=false">
+      <a href="mailto:wammber15@gmail.com" class="fa fa-envelope-o contact-fa" aria-hidden="true"></a>
+    </div>
+    <div class="col-xs-3" ng-class="{'animated jello': hover2}" ng-mouseenter="hover2=true" ng-mouseleave="hover2=false">
+      <a href="https://github.com/waamber" class="fa fa-github contact-fa" aria-hidden="true"></a>
+    </div>
+    <div class="col-xs-3" ng-class="{'animated jello': hover3}" ng-mouseenter="hover3=true" ng-mouseleave="hover3=false">
+      <a href="https://www.linkedin.com/in/amber-stuart-00076286/" class="fa fa-linkedin-square contact-fa" aria-hidden="true"></a>
+    </div>
+    <div class="col-xs-3" ng-class="{'animated jello': hover4}" ng-mouseenter="hover4=true" ng-mouseleave="hover4=false">
+      <a href="https://twitter.com/amber_maynee?lang=en" class="fa fa-twitter-square contact-fa" aria-hidden="true"></a>
+    </div>
   </div>
 
 </div>
