--- a/styles/main.css
+++ b/styles/main.css
@@ -3,97 +3,88 @@
 a {
   all: unset; }
 
-html,
 body {
-  height: 100%;
-  font-family: 'Quicksand', sans-serif;
-  color: black; }
+  margin: 0;
+  padding: 0;
+  font-family: 'Quicksand', sans-serif; }
 
-.b-a, .bar, .bar:before, .bar:after {
-  transition: all .25s;
-  content: "";
-  position: absolute;
-  left: 0;
-  height: 6px;
-  width: 30px;
-  border-radius: 15px;
-  background-color: lightgrey; }
+a {
+  text-decoration: none;
+  color: #232323;
+  transition: color 0.3s ease; }
 
-.menu-collapsed {
-  z-index: 2;
-  transition: all .25s;
-  position: fixed;
-  top: 10px;
-  left: 9px;
-  height: 36px;
-  width: 36px;
+a:hover {
+  color: tomato; }
+
+#menuToggle {
+  display: block;
+  position: relative;
+  top: 50px;
+  left: 50px;
   z-index: 1;
-  cursor: pointer; }
-  .menu-collapsed ul {
-    transition: all 0s;
-    position: fixed;
-    left: -9000px; }
+  -webkit-user-select: none;
+  user-select: none; }
 
-.bar {
-  position: fixed;
-  left: 12px;
-  top: 24px; }
-  .bar:before {
-    top: -8px; }
-  .bar:after {
-    top: 8px; }
-
-.b-a-expanded, .menu-expanded .bar:before, .menu-expanded .bar:after {
+#menuToggle input {
+  display: block;
+  width: 40px;
+  height: 32px;
+  position: absolute;
+  top: -7px;
+  left: -5px;
+  cursor: pointer;
+  opacity: 0;
   z-index: 2;
-  transition: all .25s;
-  top: -0px; }
+  -webkit-touch-callout: none; }
 
-.menu-expanded {
-  z-index: 2;
-  transition: all .25s;
-  text-align: center;
-  line-height: 200px;
-  height: 100%;
-  width: 100%;
-  border-radius: 0px;
-  top: 0;
-  left: 0;
-  background-color: rgba(0, 0, 0, 0.85); }
-  .menu-expanded ul {
-    transition: all 0s;
-    position: relative;
-    left: 0;
-    z-index: 2; }
-  .menu-expanded a {
-    transition: all .15s;
-    text-decoration: none;
-    font-size: 2em;
-    padding: 5px;
-    color: #fff;
-    display: block; }
-    .menu-expanded a:hover {
-      background-color: rgba(255, 255, 255, 0.8);
-      transition: all .15s;
-      letter-spacing: 2px;
-      color: #333;
-      border: 1px solid rgba(255, 255, 255, 0.15); }
-  .menu-expanded .bar {
-    background-color: transparent;
-    transition: all .25s; }
-    .menu-expanded .bar:before {
-      transform: rotate(45deg); }
-    .menu-expanded .bar:after {
-      transform: rotate(-45deg); }
+#menuToggle span {
+  display: block;
+  width: 33px;
+  height: 4px;
+  margin-bottom: 5px;
+  position: relative;
+  background: #cdcdcd;
+  border-radius: 3px;
+  z-index: 1;
+  transform-origin: 4px 0px;
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease; }
 
-.row {
-  padding-top: 150px; }
+#menuToggle span:first-child {
+  transform-origin: 0% 0%; }
 
-h1 {
-  font-size: 3em; }
+#menuToggle span:nth-last-child(2) {
+  transform-origin: 0% 100%; }
 
-p {
-  line-height: 160%;
-  letter-spacing: 1px; }
+#menuToggle input:checked ~ span {
+  opacity: 1;
+  transform: rotate(45deg) translate(-2px, -1px); }
+
+#menuToggle input:checked ~ span:nth-last-child(3) {
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2); }
+
+#menuToggle input:checked ~ span:nth-last-child(2) {
+  transform: rotate(-45deg) translate(0, -1px); }
+
+#menu {
+  position: absolute;
+  width: 134px;
+  margin: -100px 0 0 -50px;
+  padding: 0px;
+  padding-top: 125px;
+  background: white;
+  list-style-type: none;
+  -webkit-font-smoothing: antialiased;
+  transform-origin: 0% 0%;
+  transform: translate(-100%, 0);
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1); }
+
+#menu li {
+  padding: 10px 0;
+  font-size: 22px; }
+
+#menuToggle input:checked ~ ul {
+  transform: none; }
 
 .aboutme-page {
   padding: 0; }
@@ -162,7 +153,7 @@ p {
   font-size: 25px; }
 
 .professional-background {
-  background-color: lightgrey;
+  background-color: #EEEEEE;
   padding: 10px; }
   .professional-background .workhistory {
     padding: 5px; }
@@ -176,6 +167,33 @@ p {
 
 .blog-background {
   padding: 20px;
-  background-color: lightgray; }
+  background-color: #EEEEEE; }
   .blog-background .blog {
     border-bottom: 2px solid black; }
+
+#contact a {
+  text-decoration: none; }
+
+.contact-title {
+  font-size: 25px; }
+  .contact-title h1 {
+    margin-bottom: 30px; }
+
+.contact-fa {
+  font-size: 95px;
+  margin: 0; }
+
+#project-title {
+  font-size: 25px; }
+
+.project-background {
+  padding: 20px;
+  background-color: #EEEEEE; }
+  .project-background .project-title {
+    font-size: 35px; }
+  .project-background .projects {
+    margin-bottom: 5px;
+    border-bottom: 2px solid black; }
+
+.icon-group {
+  margin-bottom: 2px; }
